@@ -327,7 +327,7 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
                                                   	  downceil, uprate, downrate, prodid, plimit, climit, dlimit, upceil_n,
                                                   	  downceil_n, uprate_n, downrate_n, domain_limit, alias_limit, sh_limit,
                                                   	  www_limit, ftp_limit, mail_limit, sql_limit, quota_sh_limit, quota_www_limit,
-                                                  	  quota_ftp_limit, quota_mail_limit, quota_sql_limit
+                                                  	  quota_ftp_limit, quota_mail_limit, quota_sql_limit. authtype
 												   FROM
 												   	  tariffs WHERE id = ?', array($tariff['id']));
 
@@ -343,9 +343,10 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
                         					   (name, value, period, type, upceil, downceil, uprate, downrate, prodid,
                         					   plimit, climit, dlimit, upceil_n, downceil_n, uprate_n, downrate_n,
 				   							   domain_limit, alias_limit, sh_limit, www_limit, ftp_limit, mail_limit, sql_limit,
-											   quota_sh_limit, quota_www_limit, quota_ftp_limit, quota_mail_limit, quota_sql_limit, taxid)
+											   quota_sh_limit, quota_www_limit, quota_ftp_limit, quota_mail_limit, quota_sql_limit,
+											   authtype, taxid)
 							                VALUES
-							                   (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)', array_values($args));
+							                   (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)', array_values($args));
 
                         $tariffid = $this->db->GetLastInsertId('tariffs');
 
@@ -1018,7 +1019,8 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
             'dlimit' => $tariff['dlimit'],
             'type' => $tariff['type'],
             'domain_limit' => $tariff['domain_limit'],
-            'alias_limit' => $tariff['alias_limit']
+            'alias_limit' => $tariff['alias_limit'],
+			'authtype' => $tariff['authtype'],
         );
         $args2 = array();
         foreach ($ACCOUNTTYPES as $typeidx => $type) {
@@ -1028,9 +1030,9 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
         $result = $this->db->Execute('INSERT INTO tariffs (name, description, value,
 				period, taxid, numberplanid, datefrom, dateto, prodid, uprate, downrate, upceil, downceil, climit,
 				plimit, uprate_n, downrate_n, upceil_n, downceil_n, climit_n,
-				plimit_n, dlimit, type, domain_limit, alias_limit, '
+				plimit_n, dlimit, type, domain_limit, alias_limit, authtype, '
 				. implode(', ', array_keys($args2)) . ')
-				VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,' . implode(',', array_fill(0, count($args2), '?')) . ')',
+				VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,' . implode(',', array_fill(0, count($args2), '?')) . ')',
 				array_values(array_merge($args, $args2)));
         if ($result) {
             $id = $this->db->GetLastInsertID('tariffs');
@@ -1075,6 +1077,7 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
             'type' => $tariff['type'],
             'voip_tariff_id' => (!empty($tariff['voip_pricelist'])) ? $tariff['voip_pricelist'] : NULL,
             'voip_tariff_rule_id' => (!empty($tariff['voip_tariffrule'])) ? $tariff['voip_tariffrule'] : NULL,
+			'authtype' => $tariff['authtype'],
         );
         $args2 = array();
         foreach ($ACCOUNTTYPES as $typeidx => $type) {
@@ -1088,7 +1091,8 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
             period = ?, taxid = ?, numberplanid = ?, datefrom = ?, dateto = ?, prodid = ?,
             uprate = ?, downrate = ?, upceil = ?, downceil = ?, climit = ?, plimit = ?,
             uprate_n = ?, downrate_n = ?, upceil_n = ?, downceil_n = ?, climit_n = ?, plimit_n = ?,
-            dlimit = ?, domain_limit = ?, alias_limit = ?, type = ?, voip_tariff_id = ?, voip_tariff_rule_id = ?, '
+            dlimit = ?, domain_limit = ?, alias_limit = ?, type = ?, voip_tariff_id = ?, voip_tariff_rule_id = ?, 
+            authtype = ?, '
             . implode(' = ?, ', $fields) . ' = ? WHERE id=?', array_values($args));
         if ($res && $this->syslog)
             $this->syslog->AddMessage(SYSLOG::RES_TARIFF, SYSLOG::OPER_UPDATE, $args);
