@@ -30,7 +30,8 @@ if(isset($_POST['tariff']))
 	$limit = isset($_POST['limit']) ? $_POST['limit'] : array();
 
 	foreach($tariff as $key => $value)
-		$tariff[$key] = trim($value);
+		if ($key != 'authtype')
+			$tariff[$key] = trim($value);
 
 	if($tariff['name']=='' && $tariff['description']=='' && $tariff['value']=='')
 	{
@@ -54,17 +55,19 @@ if(isset($_POST['tariff']))
 
         if (empty($tariff['datefrom']))
                 $tariff['from'] = 0;
-        else
-                $tariff['from'] = date_to_timestamp($tariff['datefrom']);
-                if(empty($tariff['from']))
-                        $error['datefrom'] = trans('Incorrect effective start time!');
+        else {
+			$tariff['from'] = date_to_timestamp($tariff['datefrom']);
+			if (empty($tariff['from']))
+				$error['datefrom'] = trans('Incorrect effective start time!');
+		}
 
         if (empty($tariff['dateto']))
                 $tariff['to'] = 0;
-        else
-                $tariff['to'] = date_to_timestamp($tariff['dateto']);
-                if(empty($tariff['to']))
-                        $error['dateto'] = trans('Incorrect effective start time!');
+        else {
+			$tariff['to'] = date_to_timestamp($tariff['dateto']);
+			if (empty($tariff['to']))
+				$error['dateto'] = trans('Incorrect effective start time!');
+		}
 
 	if ($tariff['to'] != 0 && $tariff['from'] != 0 && $tariff['to'] < $tariff['from'])
 		$error['dateto'] = trans('Incorrect date range!');
@@ -109,6 +112,12 @@ if(isset($_POST['tariff']))
 
 	if(!isset($tariff['taxid']))
 		$tariff['taxid'] = 0;
+
+	$authtype = 0;
+	if (isset($tariff['authtype']))
+		foreach ($tariff['authtype'] as $val)
+			$authtype |= intval($val);
+	$tariff['authtype'] = $authtype;
 
 	$items = array('domain_limit', 'alias_limit');
 	foreach ($ACCOUNTTYPES as $typeidx => $type) {
